--- a/manifest.json
+++ b/manifest.json
@@ -17,14 +17,17 @@
 				   
 					"js/util.js", "js/translations.js", "js/templates.js",
 				   	"js/cartridgeClass.js", "js/stationClass.js",
-
-				   	"js/games/anim.js",
 				   
-				    "js/games/minesweeper/constants.js",
+
 					"js/games/minesweeper/components.js",
+					"js/games/GameLayers.js",
+					"js/games/P5Handler.js",
+					"js/games/Game.js",
+
+				    "js/games/minesweeper/constants.js",
 					"js/games/minesweeper/cell.js", 
 					"js/games/minesweeper/map.js",
-					"js/games/minesweeper/minesweeper.js",
+					"js/games/minesweeper/main.js",
 
 				   "js/contentScript.js"
 			],
